syntax = "proto3";
package org.mgw_demo.order_service_lib;

//Represents the Order service of a retail store
service OrderService {

    //place the order.
    rpc placeOrder (OrderRequest) returns (OrderResponse);

    //get available product list from a certain store.
    rpc getItemDetails (StoreLocation) returns (ItemDetails);

    //subscribe to receive details about the available items periodically.
    rpc subscribeItemDetails (StoreLocation) returns (stream ItemDetails);
}

message OrderRequest {
    string item = 1;
    int32 quantity = 2;
    string location = 3;
}

message OrderResponse {
    Status status = 1;
    int32 price = 2;
    string description = 3;
}

message StoreLocation {
    Location location = 1;
}

message ItemDetails {
    repeated Item item = 1;
}

message Item {
    string itemName = 1;
    int32 quantity = 2;
}

enum Status {
    SUCCESSFUL = 0;
    FAILED = 1;
}

enum Location {
    CITY_A = 0;
    CITY_B = 1;
    CITY_C = 2;
}